# CFDFlyingWing

./: .gitignore  README.md  pyproject.toml
configs/: default.toml
src/cfd_flying_wing/: __init__.py  cli.py  config.py  evaluator.py  geometry.py  models.py  openfoam.py  optimizer.py  sampling.py  storage.py
tests/: test_config.py  test_evaluator.py  test_openfoam.py  test_sampling_optimizer.py
